--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,7 @@
 <p id="hint">Recieve a file with end-to-end<br />encrypted magic</p>
 <img id="receive-image" src="receive-file.png" alt="CrossClave" />
 <ul id="transfers">
-  <li>
+  <li id="list-item">
     <div id="list-item-container">
       <img id="file-image" class="file" src="./assets/text-file.svg" alt="File"/>
       <div class="data">
@@ -33,6 +33,77 @@
       <img id="download-button" src="download_icon.png" alt="download..."/>
     </div>
     <progress id="progress"></progress>
+  </li>
+
+  <li id="list-item-skeleton">
+    <div id="list-item-container">
+      <svg
+        role="img"
+        width="280"
+        height="70"
+        aria-labelledby="loading-aria"
+        viewBox="0 0 280 70"
+        preserveAspectRatio="none"
+      >
+        <title id="loading-aria">Loading...</title>
+        <rect
+          x="0"
+          y="0"
+          width="100%"
+          height="100%"
+          clip-path="url(#clip-path)"
+          class="rect-class"
+        ></rect>
+        <defs>
+          <clipPath id="clip-path">
+              <rect x="71" y="9" rx="10" ry="10" width="166" height="21" /> 
+              <rect x="72" y="39" rx="6" ry="6" width="57" height="13" /> 
+              <rect x="138" y="39" rx="6" ry="6" width="37" height="13" /> 
+              <rect x="19" y="17" rx="3" ry="3" width="28" height="34" />
+          </clipPath>
+          <linearGradient id="fill">
+            <stop
+              offset="0.599964"
+              stop-color="#f3f3f3"
+              stop-opacity="1"
+            >
+              <animate
+                attributeName="offset"
+                values="-2; -2; 1"
+                keyTimes="0; 0.25; 1"
+                dur="2s"
+                repeatCount="indefinite"
+              ></animate>
+            </stop>
+            <stop
+              offset="1.59996"
+              stop-color="#ecebeb"
+              stop-opacity="1"
+            >
+              <animate
+                attributeName="offset"
+                values="-1; -1; 2"
+                keyTimes="0; 0.25; 1"
+                dur="2s"
+                repeatCount="indefinite"
+              ></animate>
+            </stop>
+            <stop
+              offset="2.59996"
+              stop-color="#f3f3f3"
+              stop-opacity="1"
+            >
+              <animate
+                attributeName="offset"
+                values="0; 0; 3"
+                keyTimes="0; 0.25; 1"
+                dur="2s"
+                repeatCount="indefinite"
+              ></animate>
+            </stop>
+          </linearGradient>
+        </defs>
+      </svg>
   </li>
 </ul>
 <div id="prompt">
@@ -57,6 +128,11 @@
 </div>
 </div>
 <span id="info">Connecting...</span>
+<input
+  type="submit"
+  id="retry"
+  class="retry invisible"
+/>
 </form>
 </body>
 </html>
