Fix typos on landing page and comment

--- a/web/index.html
+++ b/web/index.html
@@ -20,7 +20,7 @@
 <div class="header">
   <img class="logo" src="logo.svg" alt="CrossClave" />
 </div>
-<p id="hint">Recieve a file with end-to-end<br />encrypted magic</p>
+<p id="hint">Receive a file with end-to-end<br />encrypted magic</p>
 <img id="receive-image" src="receive-file.png" alt="CrossClave" />
 <ul id="transfers">
   <li id="list-item">
